<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:items="4"
        tools:listitem="@layout/recipe_list_item">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>